--- a/views/Layouts/nav.ejs
+++ b/views/Layouts/nav.ejs
@@ -21,7 +21,7 @@
                         <a class="nav-link active" aria-current="page" href="/search">Search</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
+                        <a class="nav-link active" aria-current="page" href="/Login">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a href="/trolley" class="btn"><img src="asset/shopp.png" alt="logo"></a>
