--- a/public/search.css
+++ b/public/search.css
@@ -7,9 +7,9 @@
     /*===== Color Palette =====*/
     --first-color: rgb(10, 8, 10);
     --second-color: #e0b36b;
-    --third-color: #c25e24; 
+    --third-color: #c25e24;
     --fourth-color: #a36a6a;
-    
+
     /*===== Font and typography =====*/
     --big-font: 'Courgette';
     --head-font: 'sans-serif';
@@ -25,6 +25,7 @@ body {
     background-position: right top;
     background-size: cover;
     height: 900px;
+
 }
 
 .container {
@@ -34,6 +35,7 @@ body {
     background-color: rgb(239, 220, 188);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
 header.sticky {
@@ -54,7 +56,7 @@ header.sticky {
 .navbar-brand {
     font-family: 'Courgette', sans-serif;
     color: var(--white-color);
-    margin: 0 20px; 
+    margin: 0 20px;
 
 }
 
@@ -62,18 +64,18 @@ header.sticky {
     border: 2px solid transparent;
     border-radius: 20px;
     color: var(--white-color);
-    transform: scale(1.1); 
-    transition: transform 0.3s ease; 
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
 }
 
 .navbar-nav {
     font-family: 'Courgette', sans-serif;
     color: var(--white-color);
-    background-color: rgba(255, 255, 255, 0.3); 
-    border: 2px solid transparent; 
+    background-color: rgba(255, 255, 255, 0.3);
+    border: 2px solid transparent;
     border-radius: 50px;
-    transition: background-color 0.3s ease; 
-    
+    transition: background-color 0.3s ease;
+
 }
 
 .navbar-nav:hover {
@@ -83,17 +85,17 @@ header.sticky {
 
 .nav-item {
     color: var(--white-color);
-    margin : 0 20px;
-   
+    margin: 0 20px;
+
 }
 
-.nav-item:hover{
-    background-color: rgba(255, 255, 255, 0.3); 
-    transition: background-color 0.3s ease; 
+.nav-item:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: background-color 0.3s ease;
     border-radius: 50px;
-     transform: scale(1.1); 
-    transition: transform 0.3s ease; 
-    
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+
 }
 
 main {
@@ -132,7 +134,8 @@ button:hover {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000; /* Ensure the header is above other content */
+    z-index: 1000;
+    /* Ensure the header is above other content */
     /* Add any other styles you need */
 }
 
@@ -171,4 +174,23 @@ footer {
     overflow: hidden;
     border: none;
     height: min-content;
+
+}
+
+.contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.info-column {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.info-container {
+    text-align: center;
+    margin: 20px;
 }
