--- a/public/search.css
+++ b/public/search.css
@@ -1,6 +1,11 @@
 /*----FONT---*/
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 
+* {
+    list-style: none;
+    text-decoration: none;
+}
+
 :root {
     --header-height: 3rem;
 
@@ -17,6 +22,14 @@
     --normal-font-size: .938rem;
 }
 
+
+header {
+    position: flex;
+    width: 100%;
+    height: 60px;
+    color: black;
+    text-align: center;
+}
 
 body {
     font-family: 'Courgette', sans-serif;
@@ -36,6 +49,24 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
+}
+
+
+/*Contact Us*/
+h3 {
+    font-family: 'Courgette', sans-serif;
+    text-align: center;
+    /* Center the text horizontally */
+}
+
+/*nama contact us*/
+.p {
+    font-family: sans-serif;
+    text-align: center;
+    /* Center the text horizontally */
+    padding-top: 1rem;
+    /*Adjusted the padding-top for spacing */
+    color: var(--fourth-color);
 }
 
 header.sticky {
@@ -103,12 +134,14 @@ main {
 }
 
 #search-form {
+    font-family: 'Courgette', sans-serif;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
 }
 
 #search-input {
+    font-family: 'Courgette', sans-serif;
     flex: 1;
     padding: 10px;
 }
@@ -144,6 +177,7 @@ button:hover {
 }
 
 .products {
+    font-family: 'Courgette', sans-serif;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -191,6 +225,93 @@ footer {
 }
 
 .info-container {
+    font-family: 'Courgette', sans-serif;
     text-align: center;
     margin: 20px;
+}
+
+color {
+    color: var(--first-color);
+}
+
+span {
+    color: var(--second-color);
+    margin-top: auto;
+}
+
+
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+#bookshelf {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.book:hover {
+    transform: scale(1.1);
+}
+
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.473);
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay-content {
+    background-color: rgba(255, 255, 255, 0.871);
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.overlay img {
+    max-width: 100%;
+    max-height: 300px;
+}
+
+
+.overlay-content p {
+    font-family: var(--head-font);
+    color: var(--second-color);
+}
+
+.book {
+    border: 1px transparent;
+    margin: 2px;
+    padding: 10px;
+    text-align: center;
+    width: 150px;
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+    font-family: var(--head-font);
+    color: var(--third-color);
+}
+
+.book h3 {
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+.info-container img {
+    max-width: 25px;
+    max-height: 25px;
+    border-radius: 50%;
+    color: var(--fourth-color);
+}
+
+.info-container alt {
+    color: var(--first-color);
 }
