--- a/public/profilee.css
+++ b/public/profilee.css
@@ -31,6 +31,7 @@ header {
 }
 
 body {
+    font-family: 'Courgette', sans-serif;
     background-image: url('asset/gradienbg.png');
     background-repeat: no-repeat;
     background-position: right top;
@@ -142,6 +143,7 @@ footer {
 }
 
 .info-container {
+    font-family: 'Courgette', sans-serif;
     text-align: center;
     margin: 20px;
 }
@@ -266,6 +268,7 @@ section.about {
 
 
 form {
+    font-family: 'Courgette', sans-serif;
     width: 300px;
     margin: 0 auto;
 }
@@ -300,6 +303,7 @@ input[type="submit"]:hover {
 }
 
 p {
+    font-family: 'Courgette', sans-serif;
     margin-top: 10px;
 }
 
@@ -324,6 +328,7 @@ a:hover {
 }
 
 .login-form label {
+    font-family: 'Courgette', sans-serif;
     margin-bottom: 5px;
     display: block;
 }
@@ -339,6 +344,7 @@ a:hover {
 }
 
 .login-form input[type="submit"] {
+    font-family: 'Courgette', sans-serif;
     width: 100%;
     padding: 10px;
     border: none;
