--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -7,7 +7,7 @@
 
    <a href="#" onclick="history.back();" class="back-button">Back</a> <!-- Tombol back -->
     <div class="container">
-        <form action="/users-route" method="get" class="login-form">
+        <form action="/users-route/users" method="post" class="login-form">
             <label for="name">Name:</label><br>
             <input type="text" id="name" name="name"><br>
             <label for="email">Email:</label><br>
