--- a/public/admin.css
+++ b/public/admin.css
@@ -10,10 +10,10 @@
     /*===== Color Palette =====*/
     --first-color: rgb(10, 8, 10);
     --second-color: #e0b36b;
-    --third-color: #c25e24; 
+    --third-color: #c25e24;
     --fourth-color: #a36a6a;
-    --white-color:  #ffffff;
-    
+    --white-color: #ffffff;
+
     /*===== Font and typography =====*/
     --big-font: 'Courgette';
     --head-font: 'sans-serif';
@@ -43,20 +43,24 @@ body {
 
 h1 {
     font-family: 'Courgette', sans-serif;
-    text-align: center; /* Center the text horizontally */
+    text-align: center;
+    /* Center the text horizontally */
     padding-top: 6rem;
     color: var(--fourth-color);
 }
 
 h3 {
     font-family: 'Courgette', sans-serif;
-    text-align: center; /* Center the text horizontally */
+    text-align: center;
+    /* Center the text horizontally */
 }
 
 .p {
     font-family: sans-serif;
-    text-align: center; /* Center the text horizontally */
-    padding-top: 1rem; /*Adjusted the padding-top for spacing */
+    text-align: center;
+    /* Center the text horizontally */
+    padding-top: 1rem;
+    /*Adjusted the padding-top for spacing */
     color: var(--fourth-color);
 }
 
@@ -69,8 +73,8 @@ h3 {
 
 .navbar-brand {
     font-family: 'Courgette', sans-serif;
-    color: var(--first-color)!important; 
-    margin: 0 20px; 
+    color: var(--first-color) !important;
+    margin: 0 20px;
 
 }
 
@@ -78,41 +82,41 @@ h3 {
     border: 2px solid transparent;
     border-radius: 20px;
     color: var(--fourth-color);
-    transform: scale(1.1); 
-    transition: transform 0.3s ease; 
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
 }
 
 .navbar-nav {
     font-family: 'Courgette', sans-serif;
     color: var(--fourth-color);
-    background-color: rgba(255, 255, 255, 0.3); 
-    border: 2px solid transparent; 
+    background-color: rgba(255, 255, 255, 0.3);
+    border: 2px solid transparent;
     border-radius: 50px;
-    transition: background-color 0.3s ease; 
-    
+    transition: background-color 0.3s ease;
+
 }
 
 .navbar-nav:hover {
     border: 2px solid transparent;
     border-radius: 50px;
-    
+
 }
 
 .nav-item {
     color: var(--fourth-color);
-    margin : 0 20px;
-   
+    margin: 0 20px;
+
 }
 
-.nav-item:hover{
-    background-color: rgba(255, 255, 255, 0.3); 
-    transition: background-color 0.3s ease; 
+.nav-item:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: background-color 0.3s ease;
     border-radius: 50px;
     margin-left: 10px;
-    
-     transform: scale(1.1); 
-    transition: transform 0.3s ease; 
-    
+
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+
 }
 
 
@@ -198,7 +202,7 @@ body {
 
 
 .overlay-content p {
-    font-family: var(--head-font); 
+    font-family: var(--head-font);
     color: var(--second-color);
 }
 
@@ -210,19 +214,19 @@ body {
     width: 150px;
     transition: transform 0.3s ease-in-out;
     cursor: pointer;
-    font-family: var(--head-font); 
+    font-family: var(--head-font);
     color: var(--third-color);
 }
 
 .book h3 {
-    font-size: 14px; 
-    margin-top: 5px; 
+    font-size: 14px;
+    margin-top: 5px;
 }
 
 .info-container img {
-    max-width: 25px; 
-    max-height: 25px; 
-    border-radius: 50%; 
+    max-width: 25px;
+    max-height: 25px;
+    border-radius: 50%;
     color: var(--fourth-color);
 }
 
@@ -236,9 +240,9 @@ span2 {
 
 section.about {
     padding-bottom: 10%;
-    margin-left:20%;
-    margin-right:20%;
-    
+    margin-left: 20%;
+    margin-right: 20%;
+
 }
 
 .action-btn {
@@ -252,12 +256,13 @@ section.about {
     margin: 1em 0;
     transition: 0.3s;
 }
-  
+
 .sticky {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000; /* Ensure the header is above other content */
+    z-index: 1000;
+    /* Ensure the header is above other content */
     /* Add any other styles you need */
 }
 
@@ -270,7 +275,7 @@ section.about {
     background-color: #f9f9f9;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 40px; 
+    margin-bottom: 40px;
 }
 
 h3 {
@@ -314,21 +319,98 @@ button[type="submit"]:hover {
 }
 
 .back-button {
-    color: #007bff; /* Warna teks */
-    text-decoration: none; /* Hapus garis bawah */
-    cursor: pointer; /* Tampilan kursor saat dihover */
-    transition: color 0.3s ease; /* Animasi perubahan warna saat hover */
-    background-color: #fff; /* Warna background */
-    border: 1px solid #007bff; /* Garis tepi */
-    border-radius: 20px; /* Radius sudut */
-    padding: 10px 20px; /* Padding (atas-bawah, kiri-kanan) */
-    display: inline-block; /* Agar bisa memberikan padding */
-    margin-top: 20px; /* Jarak di atas tombol */
+    color: #007bff;
+    /* Warna teks */
+    text-decoration: none;
+    /* Hapus garis bawah */
+    cursor: pointer;
+    /* Tampilan kursor saat dihover */
+    transition: color 0.3s ease;
+    /* Animasi perubahan warna saat hover */
+    background-color: #fff;
+    /* Warna background */
+    border: 1px solid #007bff;
+    /* Garis tepi */
+    border-radius: 20px;
+    /* Radius sudut */
+    padding: 10px 20px;
+    /* Padding (atas-bawah, kiri-kanan) */
+    display: inline-block;
+    /* Agar bisa memberikan padding */
+    margin-top: 20px;
+    /* Jarak di atas tombol */
 }
 
 /* Efek hover */
 .back-button:hover {
-    color: #0056b3; /* Warna teks saat dihover */
-    background-color: #f0f0f0; /* Warna background saat dihover */
+    color: #0056b3;
+    /* Warna teks saat dihover */
+    background-color: #f0f0f0;
+    /* Warna background saat dihover */
 }
 
+.container2 {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 40px;
+}
+
+h3 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    margin-bottom: 10px;
+}
+
+input[type="text"],
+input[type="number"],
+textarea {
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+textarea {
+    height: 100px;
+}
+
+button[type="submit"] {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.container3 {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 40px;
+}
+
+.container4 {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 40px;
+}
