--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -6,7 +6,7 @@
 
     <body>
     <div class="container">
-        <form action="/authentication-route/login" method="post" class="login-form">
+        <form action="/authentication/login" method="post" class="login-form">
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email"><br>
             <label for="password">Password:</label><br>
