--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -9,7 +9,7 @@
         <!-- Form untuk menambahkan buku baru -->
         <div class="container">
             <h3>Add New Book</h3>
-            <form action="/books" method="POST">
+            <form action="/users-route/books" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required><br>
                 <label for="author">Author:</label>
@@ -25,7 +25,71 @@
                 <button type="submit">Add Book</button>
             </form>
         </div>
+
+
+        <div class="container2">
+            <h3>Update Book</h3>
+            <form action="/users-route/books" method="POST">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br>
+                <label for="author">Author:</label>
+                <input type="text" id="author" name="author" required><br>
+                <label for="price">Price:</label>
+                <input type="number" id="price" name="price" required><br>
+                <label for="category">Category:</label>
+                <input type="text" id="category" name="category" required><br>
+                <label for="description">Description:</label>
+                <textarea id="description" name="description" required></textarea><br>
+                <label for="image">Image URL:</label>
+                <input type="text" id="image" name="image" required><br>
+                <button type="submit">Add Book</button>
+            </form>
+        </div>
+
     </div>
+
+    <div class="container3">
+        <h3>Add Accessories</h3>
+        <form action="/users-route/books" method="POST">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br>
+            <label for="stock">Stock:</label>
+            <input type="number" id="stock" name="stock" required><br>
+            <label for="price">Price:</label>
+            <input type="number" id="price" name="price" required><br>
+            <label for="category">Category:</label>
+            <input type="text" id="category" name="category" required><br>
+            <label for="description">Description:</label>
+            <textarea id="description" name="description" required></textarea><br>
+            <label for="image">Image URL:</label>
+            <input type="text" id="image" name="image" required><br>
+            <button type="submit">Add Book</button>
+        </form>
+
+    </div>
+
+    <div class="container4">
+        <h3>Update Accessories</h3>
+        <form action="/users-route/books" method="POST">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br>
+            <label for="stock">Stock:</label>
+            <input type="number" id="stock" name="stock" required><br>
+            <label for="price">Price:</label>
+            <input type="number" id="price" name="price" required><br>
+            <label for="category">Category:</label>
+            <input type="text" id="category" name="category" required><br>
+            <label for="description">Description:</label>
+            <textarea id="description" name="description" required></textarea><br>
+            <label for="image">Image URL:</label>
+            <input type="text" id="image" name="image" required><br>
+            <button type="submit">Add Book</button>
+        </form>
+
+    </div>
+    
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
