--- a/views/trolley.ejs
+++ b/views/trolley.ejs
@@ -1,21 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-<%- include('layouts/header.ejs') %>
-  <%- include('layouts/nav.ejs') %>
+<html lang="en" ng-app="bookApp">
+  <%- include('layouts/header.ejs') %>
+<head>
+    <!--header-->
+    <link rel="stylesheet" type="text/css" href="trolley.css">
+</head>
 
-    <head>
-      <link rel="stylesheet" type="text/css" href="trolley.css">
-    </head>
+<body ng-controller="TrolleyController" ng-init="trolleyItems = bookData">
+    
+    <header class="sticky">
+    <!--nav-->
+    <%- include('layouts/nav.ejs') %>
+    </header>
 
-    <body>
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-      <script src="trolley.js"></script>
-      <script src="BookAPI.js"></script>
-    </body>
+    <section class="items" id="items">
+        <div id="trolleyItems">
+            <div class="container mt-4 rounded">
+                <h2>Your Shopping Trolley</h2>
+                <table id="trolleyTable" class="table">
+                    <thead>
+                      <tr >
+                        <th class="p-2">Title</th>
+                        <th class="p-2">Price</th>
+                        <th class="p-2">Quantity</th>
+                        <th class="p-2">Action</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <!-- Trolley items will be added here dynamically -->
+                      <tr ng-repeat="item in trolleyItems">
+                          <td>{{item.title}}</td>
+                          <td>${{item.price}}</td>
+                          <td>{{item.quantity}}</td>
+                          <td><button class="btn btn-danger" ng-click="removeFromTrolley($index)">Remove</button></td>
+                      </tr>
+                    </tbody>
+                    <tfoot>
+                      <tr>
+                          <td colspan="3" class="text-end">Total Price:</td>
+                          <td>${{totalPrice}}</td>
+                      </tr>
+                    </tfoot>
+                  </table>
+                <div class="text-end mt-3">
+                    <button id="payButton" class="btn btn-primary rounded" data-bs-toggle="modal" data-bs-target="#exampleModal">PAY</button>
+                  </div>
+              </div>
 
-    <%- include('layouts/footer.ejs') %>
+        <!-- <div class="cart-items" id="trolleyItems">
+             Trolley items will be displayed here 
+            <div ng-repeat="(index, item) in trolleyItems">
+                <span>{{item.title}} - Quantity: {{item.quantity}} - Price: ${{item.price}}</span>
+                <span class="remove-item" ng-click="removeFromTrolley(index)">Remove</span>
+            </div>
+        </div>
+        <div class="total-price">
+            Total Price: $<span>{{totalPrice}}</span>
+        </div> -->
+
+        <!--footer-->
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="trolley.js"></script>
+    <script src="BookAPI.js"></script>
+</body>
 
 </html>
